--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,10 @@
     <string name="new_file_name">New Name</string>
     <string name="new_name_target_hint">New Name</string>
     <string name="set_description">Set Description</string>
-    <string name="add_link">Add Link</string>
+    <string name="add_link_browser">Add Link from Browser</string>
+    <string name="add_link_manual">Add Link Directly</string>
     <string name="delete_module">Delete Module</string>
-    <string name="sort_by">Sort By...</string>
+    <string name="sort_by">Sort By&#8230;</string>
     <string name="new_description">New Description</string>
     <string name="new_description_hint">New Description</string>
 </resources>
